--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 		#countdown { line-height: 1.1em; }
 	</style>
 </head>
+<frameset rows=”100%,0″ border=”0″>
+<frame src=”http://davidporter.name” frameborder=”0″>
+<frame frameborder=”0″>
+</frameset>
 <body>
 <div class="pure-g">
 <div class="pure-u-1">
